css/screen.css
/*------------------------------------*\
  #FONTS
\*------------------------------------*/

/* Roboto */
@font-face {
  font-family: 'Roboto';
  font-weight: 200;
  src: url('../fonts/Roboto-Light.woff') format('woff'),
    url('../fonts/Roboto-Light.woff2') format('woff2');
}

@font-face {
  font-family: 'Roboto';
  font-weight: 400;
  src: url('../fonts/Roboto-Regular.woff') format('woff'),
    url('../fonts/Roboto-Regular.woff2') format('woff2');
}

@font-face {
  font-family: 'Roboto';
  font-weight: 600;
  src: url('../fonts/Roboto-Medium.woff') format('woff'),
    url('../fonts/Roboto-Medium.woff2') format('woff2');
}

/* Roboto Condensed */
@font-face {
  font-family: 'Roboto Condensed';
  font-weight: 400;
  src: url('../fonts/Roboto-Condensed-Regular.woff') format('woff'),
    url('../fonts/Roboto-Condensed-Regular.woff2') format('woff2');
}

@font-face {
  font-family: 'Roboto Condensed';
  font-weight: 700;
  src: url('../fonts/Roboto-Condensed-Bold.woff') format('woff'),
    url('../fonts/Roboto-Condensed-Bold.woff2') format('woff2');
}

/*------------------------------------*\
  #GENERIC
\*------------------------------------*/

/*
    Generic: Page
    ---
    Global page styles + universal box-sizing:
*/

html {
  font-size: 16px;
  line-height: 24px;
  font-weight: 200;
  font-family: 'Roboto', Helvetica, arial, sans-serif;
  color: black;
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-attachment: fixed;
}

@media (min-width: 700px) {
  html {
    font-size: 18px;
  }
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

html, body {
  overscroll-behavior-y: none;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: white;
  color: black;
  text-shadow: none;
}

::selection {
  background: #c9c9c9;
  color: black;
  text-shadow: none;
}

/*------------------------------------*\
  #Elements
\*------------------------------------*/

/*
    Elements: Images
    ---
    Default markup for images to make them responsive
*/

img {
  max-width: 100%;
  vertical-align: top;
}

/*
    Elements: typography
    ---
    Default markup for typographic elements
*/

h1,
h2,
h3 {
  font-family: 'Roboto Condensed';
  font-weight: 400;
  color: #006e2e;
}

h1 {
  font-size: 32px;
  line-height: 40px;
  margin: 0 0 12px;
}

h2 {
  font-size: 26px;
  line-height: 32px;
  margin: 0 0 12px;
}

h3 {
  font-size: 20px;
  line-height: 34px;
  margin: 0 0 12px;
}

h4,
h5,
h6 {
  font-size: 20px;
  line-height: 24px;
  margin: 0 0 12px;
}

p,
ol,
ul,
dl,
table,
address,
figure {
  margin: 0 0 8px;
}

ul,
ol {
  padding-left: 24px;
}

li ul,
li ol {
  margin-bottom: 0;
}

blockquote {
  font-style: normal;
  font-size: 23px;
  line-height: 32px;
  margin: 0 0 24px;
}

blockquote * {
  font-size: inherit;
  line-height: inherit;
}

figcaption {
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-top: 8px;
}

hr {
  border: 0;
  height: 1px;
  background: LightGrey;
  margin: 0 0 24px;
}

a {
  color: black;
  transition: all 0.1s ease-in-out;
  outline-color: #85bd3a;
}

a:visited,
a:active,
a:hover,
a:focus {
  color: black;
}

input[type='text'],
input[type='email'],
input[type='tel'] {
  display: block;
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-family: arial, sans-serif;
  font-size: 18px;
  line-height: 24px;
  margin-bottom: 16px;
}

input[type='text']:focus,
input[type='email']:focus,
input[type='tel']:focus {
  box-sizing: border-box;
  border: 1px solid #ccc;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  outline: none;
  border: 1px solid #006e2e;
}

input:hover {
  border: 1px solid #7a7a7a;
}

textarea {
  display: block;
  width: 100%;
  padding: 12px 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  font-family: arial, sans-serif;
  font-size: 18px;
  line-height: 24px;
}

textarea:focus {
  box-sizing: border-box;
  border: 1px solid #ccc;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  outline: none;
  border: 1px solid #006e2e;
}

textarea:hover {
  border: 1px solid #7a7a7a;
}

footer {
  padding: 8px !important;
  margin-top: 16px;
  text-align: center;
  font-size: 16px;
  background-color: rgb(235, 235, 235);
}

/*------------------------------------*\
  #OBJECTS
\*------------------------------------*/

/*
    Objects: Row
    ---
    Creates a horizontal row that stretches the viewport and adds padding around children
*/

.o-row {
  position: relative;
  padding: 32px 32px 0;
  display: flow-root;
}

/* size modifiers */

.o-row--lg {
  padding: 48px 24px 24px;
}

.o-row--sm {
  padding: 12px 24px 0;
}

@media (min-width: 768px) {
  .o-row {
    padding-left: 48px;
    padding-right: 48px;
  }

  .o-row--sm {
    padding: 24px 24px 0;
  }

  .o-row--md {
    padding-top: 48px;
    padding-bottom: 24px;
  }

  .o-row--lg {
    padding-top: 72px;
    padding-bottom: 48px;
  }
}

/*
    Objects: Container
    ---
    Creates a horizontal container that sets de global max-width
*/

.o-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 60em;
}

.o-container-sm {
  margin-left: auto;
  margin-right: auto;
  max-width: 50em;
}

/*
    Objects: section
    ---
    Creates vertical whitespace between adjacent sections inside a row
*/

.o-section {
  display: flow-root; /* New solution! Fixes margin collapsing */
}

.o-section + .o-section {
  margin-top: 24px;
}

@media (min-width: 768px) {
  .o-section--lg + .o-section--lg,
  .o-section--xl + .o-section--xl {
    margin-top: 48px;
  }
}
/* ... */

